Update meta title for the invitation website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:title"
-      content="NamaBrandAnda - Undangan Website Murah"
+      content="DiaryPro - Undangan Website Murah"
     />
     <meta
       property="og:description"
