--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>NamaBrandAnda - Undangan Website Murah</title>
+    <title>DiaryPro - Undangan Website Murah</title>
     <meta
       name="description"
       content="Buat undangan online digital website cukup pilih tema, edit detail acara, upload foto, semua bisa selesai dalam hitungan menit."
