Update og:image URL in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://alamatwebvercel.app/assets/thumbnail.jpg"
+      content="https://diarypro-digital-invitation.vercel.app//assets/thumbnail.jpg"
     />
     <meta property="og:url" content="https://alamatwebvercel.app" />
 
