Update Open Graph URL in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       property="og:image"
       content="https://diarypro-digital-invitation.vercel.app//assets/thumbnail.jpg"
     />
-    <meta property="og:url" content="https://alamatwebvercel.app" />
+    <meta property="og:url" content="https://diarypro-digital-invitation.vercel.app/" />
 
     <meta property="og:type" content="website" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
