Update meta tags and logo image source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:title"
-      content="DiaryPro - Undangan Website Murah"
+      content="NamaBrandAnda - Undangan Website Murah"
     />
     <meta
       property="og:description"
@@ -19,9 +19,9 @@
     />
     <meta
       property="og:image"
-      content="https://diarypro-digital-invitation.vercel.app//assets/thumbnail.jpg"
+      content="https://alamatwebvercel.app/assets/thumbnail.jpg"
     />
-    <meta property="og:url" content="https://diarypro-digital-invitation.vercel.app/" />
+    <meta property="og:url" content="https://alamatwebvercel.app" />
 
     <meta property="og:type" content="website" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -38,7 +38,7 @@
           class="h-full w-full max-w-6xl px-4 flex items-center justify-between mx-auto"
         >
           <div class="w-50 flex items-center gap-2">
-            <img src="https://github.com/rizkinurrahman107-prog/diarypro-digital-invitation/blob/main/assets/diarypro%20-%20Wb%20Bali.png" alt="Logo" height="48" width="48" />
+            <img src="/assets/logo.png" alt="Logo" height="48" width="48" />
             <span class="text-lg font-bold">NamaBrandAnda</span>
           </div>
           <ul class="hidden lg:flex items-center justify-center grow gap-2">
