--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:title"
-      content="NamaBrandAnda - Undangan Website Murah"
+      content="DiaryPro - Undangan Website Murah"
     />
     <meta
       property="og:description"
@@ -762,7 +762,7 @@
                       Preview
                     </a>
                     <a
-                      href="https://wa.me/${phoneNumber}?text=Saya+mau+pesan+tema+${theme.name}"
+                      href="https://wa.me/${087729838031}?text=Saya+mau+pesan+tema+${theme.name}"
                       target="_blank"
                       rel="nofollow"
                       class="btn text-sm sm:text-base inline-flex items-center text-center justify-center rounded h-8 px-2 bg-primary text-white hover:bg-primary"
