--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               <div class="text-4xl font-bold">Rp99.000</div>
             </div>
             <a
-              href="https://wa.me/62812xxxxxxxx?text=Saya+mau+pesan+paket+Premium"
+              href="https://wa.me/6287729838031?text=Saya+mau+pesan+paket+Premium"
               target="_blank"
               rel="nofollow"
               class="btn w-full text-sm sm:text-base inline-flex items-center text-center justify-center rounded h-12 px-2 bg-primary text-white hover:bg-primary"
