--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     />
     <meta
       property="og:image"
-      content="https://alamatwebvercel.app/assets/thumbnail.jpg"
+      content="https://diarypro-digital-invitation.vercel.app/assets/thumbnail.jpg"
     />
-    <meta property="og:url" content="https://alamatwebvercel.app" />
+    <meta property="og:url" content="https://diarypro-digital-invitation.vercel.app" />
 
     <meta property="og:type" content="website" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -109,7 +109,7 @@
           </ul>
           <div class="w-50 text-right">
             <a
-              href="https://wa.me/62812xxxxxxxx"
+              href="https://wa.me/6287729838031"
               class="btn px-2 sm:px-4 py-2 bg-primary text-white rounded cursor-pointer hover:bg-primary inline-flex items-center justify-center gap-2"
             >
               <span class="sm:hidden">
