--- a/index.html
+++ b/index.html
@@ -695,14 +695,14 @@
 
     <!-- Footer -->
     <footer class="py-8 text-center text-zinc-500">
-      <p>&copy; NamaBrandAnda - Satu Momen Undangan Website</p>
+      <p>&copy; DiaryPro - DiaryPro Undangan Website</p>
       <p class="text-xs mt-2">
-        Jl. Sultan Adam, Komp. Mahligai No. 27 RT 009 RW 001 Kota Banjarmasin
+        Jalan raya sading, Kec.Mengwi, Kab.Badung, Bali
       </p>
     </footer>
 
     <script>
-      const baseUrl = "https://webinvit.id";
+      const baseUrl = "https://diarypro.my.id/";
       const phoneNumber = "62812xxxxxxxx";
 
       const categoryUrl = baseUrl + "/seller/api/v1/categories";
