--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
     </footer>
 
     <script>
-      const baseUrl = "https://webinvit.id";
+      const baseUrl = "https://kawin.web.id";
       const phoneNumber = "62812xxxxxxxx";
 
       const categoryUrl = baseUrl + "/seller/api/v1/categories";
