--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         >
           <div class="w-50 flex items-center gap-2">
             <img src="/assets/logo.png" alt="Logo" height="48" width="48" />
-            <span class="text-lg font-bold">NamaBrandAnda</span>
+            <span class="text-lg font-bold">DiaryPro</span>
           </div>
           <ul class="hidden lg:flex items-center justify-center grow gap-2">
             <li>
