--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     >
       <div class="max-w-7xl mx-auto px-6">
         <h2 class="text-4xl font-bold text-center mb-16 max-w-4xl mx-auto">
-          <span class="text-gradient">NamaBrandAnda</span> menyediakan
+          <span class="text-gradient">DiaryPro</span> menyediakan
           berbagai fitur untuk mendukung acara Anda dari A-Z:
         </h2>
 
