--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     <section id="tentang" class="py-16 md:py-24">
       <div class="max-w-7xl mx-auto px-6">
         <h2 class="text-4xl font-bold text-center">
-          <span class="text-gradient">NamaBrandAnda</span> adalah platform
+          <span class="text-gradient">DiaryPro</span> adalah platform
           pembuat undangan digital profesional yang berfokus pada kemudahan,
           keindahan, dan pengalaman pengguna. Kami percaya
           <span class="text-gradient">setiap momen berharga</span> layak
